--- a/rate-repository-app/package.json
+++ b/rate-repository-app/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "lint": "eslint ./src/**/*.{js,jsx} App.js --no-error-on-unmatched-pattern"
   },
   "dependencies": {
     "expo": "~38.0.8",
@@ -13,14 +14,12 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-router-native": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "babel-eslint": "^10.1.0",
-    "babel-preset-expo": "~8.1.0",
-    "eslint": "^7.11.0",
-    "eslint-plugin-react": "^7.21.4"
+    "babel-preset-expo": "~8.1.0"
   },
   "private": true
 }
